# meemoo-cloudevents-py

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
cloudevents/: __init__.py  events.py
docs/: event_protocol_message.puml
src/cloudevents/: __init__.py  events.py
tests/: test_events.py
